# lua-5.3.5

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  DEBUG.md  README.md  TABLE.md
cmod/: CMakeLists.txt  create-lua-cmod.sh  delete-lua-cmod.sh
cmod/bcfx/: CMakeLists.txt  README.md
cmod/bcfx/include/: bcfx.h  bcfx_math.h  bcfx_misc.h
cmod/bcfx/src/: bcfx.c  cmdbuf.c  cmdbuf.h  common.h  context.c  context.h  encoder.c  encoder.h  frame.c  frame.h  handle.c  handle.h  renderer.h  sortkey.c  sortkey.h  utils.c  utils.h  view.c  view.h
cmod/bcfx/wrap/: bcfx_wrap.c  bcfx_wrap.h  color.c  color_wrap.c  mbio.c  membuf_wrap.c  utils.c  vl_wrap.c
cmod/boolarray/: CMakeLists.txt
cmod/boolarray/src/: boolarray.c
cmod/dir/: CMakeLists.txt
cmod/dir/src/: dir.c
cmod/gb2312/: CMakeLists.txt  README.md
cmod/gb2312/src/: gb2312-unicode.c  gb2312.c  gb2312.h
cmod/gb2312/test/: gb2312-test.c
cmod/glfwrap/: CMakeLists.txt  README.md
cmod/glfwrap/src/: context.c  egl_context.c  egl_context.h  init.c  input.c  internal.h  mappings.h  monitor.c  osmesa_context.c  osmesa_context.h  vulkan.c  window.c
cmod/glfwrap/wrap/: context_wrap.c  glfwrap.c  glfwrap.h  input_wrap.c  monitor_wrap.c  window_wrap.c
cmod/hello/: CMakeLists.txt
cmod/hello/src/: hello.c
cmod/hellomod/: CMakeLists.txt  hellomod.c
cmod/json/: CMakeLists.txt
cmod/json/include/: cJSON.h
cmod/json/src/: cJSON.c
cmod/json/wrap/: json.c
cmod/lpeg/: CMakeLists.txt
cmod/lproc/: CMakeLists.txt
cmod/lproc/src/: lproc.c
cmod/luabitop/: CMakeLists.txt
cmod/luacjson/: CMakeLists.txt
cmod/luacjson/src/: lua_cjson.c
cmod/luacstruct/: CMakeLists.txt
cmod/luacstruct/src/: struct.c
cmod/luanet/: CMakeLists.txt
cmod/luanet/include/: luanet.h
cmod/luanet/src/: luanet.c
cmod/luasocket/: CMakeLists.txt
cmod/luasocket/include/: compat.h  io.h  luasocket.h  mime.h  options.h  pierror.h  select.h  tcp.h  udp.h  unix.h  unixdgram.h  unixstream.h  usocket.h  wsocket.h
cmod/luasocket/mime/: mime.c  mime.h
cmod/luasocket/socket/: auxiliar.c  auxiliar.h  buffer.c  buffer.h  except.h  inet.c  inet.h  io.c  select.c  socket.h  timeout.h  udp.c
cmod/luasocket/src/: compat.c  except.c  inet.c  luasocket.c  mime.c  options.c  select.c  serial.c  tcp.c  timeout.c  udp.c  unix.c  unixdgram.c  unixstream.c  wsocket.c
cmod/madwrap/: CMakeLists.txt  README.md
cmod/madwrap/docs/: libmad-0.15.1b.tar
cmod/madwrap/include/: mad.h
cmod/madwrap/src/: bit.c  bit.h  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  layer12.c  layer12.h  layer3.c  layer3.h  stream.c  stream.h  synth.c  synth.h  timer.c  timer.h  version.c  version.h
cmod/madwrap/wrap/: mad_wrap.c
cmod/man/: CMakeLists.txt
cmod/man/src/: manual.c  manual.h  mstrlib.h
cmod/nfd/: CMakeLists.txt
cmod/nfd/include/: nfd.h
cmod/nfd/src/: nfd_common.c  nfd_common.h
cmod/nfd/wrap/: nfdwrap.c
cmod/nuklear/: CMakeLists.txt
cmod/nuklear/include/: nuklear.h
cmod/nuklear/src/: nuklear_9slice.c  nuklear_button.c  nuklear_chart.c  nuklear_color_picker.c  nuklear_combo.c  nuklear_context.c  nuklear_contextual.c  (+26 more)
cmod/portaudio/: CMakeLists.txt  README.md
cmod/protobuf/: CMakeLists.txt  pb.c
cmod/tolua/: CMakeLists.txt
cmod/uvwrap/: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/c-call-lua/: CMakeLists.txt
demo/c-lang/: CMakeLists.txt
demo/glfwrap/: clipboard.lua  cursor.lua  usinglfw.lua
demo/lpg/: filter.lua  lpg.lua  miniforth.lua  testforth.lua  tic-tac-toe.lua
demo/lua/: callback.lua
demo/music/: audio.lua
demo/oglib/: Main.lua
demo/pbdemo/: CMakeLists.txt  README.md  decoderaw.lua  decompilepb.lua  descriptor.lua  desctbl2bin.lua  makebincode.lua  pbcbin2proto.lua  usingpb.lua
demo/pil/: CMakeLists.txt  brainf.lua  egg.lua  pil.lua  test.lua  usegb2312.lua  usemod.lua
demo/protobuf/: CMakeLists.txt
demo/reload/: test_reload.lua
demo/runner/: CMakeLists.txt
demo/scripts/: asm.lua  debug.lua  identity.lua  inject.lua  parse.lua  usingjson.lua  usinglfw.lua  usingnfd.lua  usingredux.lua
demo/stdlib/: stdlib.lua  tablesrc.lua  tostring.lua
demo/triangle/: colorcircle.lua  imgui.lua  input.lua  loader.lua  main.lua  triangle.lua
demo/uvwrap/: examples.lua  fs.lua  stick.lua  using.lua  usinglibuv.lua  uvdebug.lua  word.txt
liblua/: CMakeLists.txt
liblua/core/: lapi.c  lapi.h  lasm.c  lasm.h  lcode.c  lcode.h  lctype.c  lctype.h  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  ltable.c  ltable.h  ltm.c  ltm.h  lundump.c  lundump.h  lvm.c  lvm.h  (+2 more)
liblua/include/: lasmlib.h  lauxlib.h  lua.h  luaconf.h  lualib.h  luautil.h
liblua/libraries/: lasmlib.c  lauxlib.c  lbaselib.c  lbitlib.c  lcorolib.c  ldblib.c  linit.c  liolib.c  lmathlib.c  loadlib.c  loslib.c  lstrlib.c  ltablib.c  lutf8lib.c
liblua/test/: CMakeLists.txt
liblua/util/: bytebuf.c  lutillib.c  membuf.c
lmod/: CMakeLists.txt  bcfx.lua  dir.lua  enhance.lua  gb2312.lua  glfw.lua  json.lua  libuv.lua  mad.lua  nfd.lua  nuklear.lua  portaudio.lua  redux.lua  repl.lua  watch.lua
lmod/common/: tablesrc.lua
lmod/json/: cjson.lua  init.lua
lmod/libuv/: fs.lua  init.lua
lmod/man/: init.lua  string.lua
lmod/protobuf/: descriptor_config.lua  init.lua  pb2proto.lua  pbc.lua  pbc_config.lua  protobuf.lua  varint.lua
lmod/reload/: README.md  init.lua
lua/: CMakeLists.txt  lua.c
lua/src/: lua.c
luac/: CMakeLists.txt
luac/src/: luac.c
lualib/: CMakeLists.txt  lapi.c  lstate.c
lualib/core/: lapi.c  ldebug.c  ldo.c  llex.c  lmem.c  lstring.c  ltable.c  lvm.c
lualib/libraries/: lauxlib.c  lbaselib.c  loadlib.c  loslib.c
lualib/src/: lapi.c  ldo.c  lmem.c  lparser.c  lstate.c  lstring.c
luawithlib/: CMakeLists.txt
src/: CMakeLists.txt  lobject.h  lstate.c  lua.h
tools/: CMakeLists.txt
tools/luatoken/: CMakeLists.txt
tools/luatt/: CMakeLists.txt
tools/pbdump/: CMakeLists.txt
(+739 files in other folders)
