# cmake_minimum_required(VERSION 3.0)
# project(lua)
if(APPLE)
    add_compile_options(-std=gnu99 -g -Wall -Wextra -DLUA_COMPAT_5_2 -DLUA_USE_MACOSX)
endif(APPLE)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_options(-std=gnu99 -g -Wall -Wextra -DLUA_COMPAT_5_2 -DLUA_USE_LINUX)
endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
if(WIN32)
    add_compile_options(-Wall -DLUA_COMPAT_5_2)
endif(WIN32)
# set(CMAKE_CXX_FLAGS xxx)
# set(CMAKE_C_FLAGS xxx)
include_directories(../include)
aux_source_directory(. LUA_SRC)
add_executable(lua ${LUA_SRC})
target_link_libraries(lua lualib)
if(APPLE)
    target_link_libraries(lua readline)
endif(APPLE)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    target_link_libraries(lua m readline dl)
endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
